--- a/latex/glossary.tex
+++ b/latex/glossary.tex
@@ -2,11 +2,11 @@
 
 \newglossaryentry{X3D}{
   name=X3D,
-  description={whatever x3d is}
+  description={An XML based scene description language and the successor of \gls{VRML}}
 }
 \newglossaryentry{Roundtrip3D}{
-  name=X3D,
-  description={whatever x3d is}
+  name=Roundtrip3D,
+  description={Aim to extend SSIML, a MDD approach for 3D development to full round-trip engineering. \cite{roundtrip3dwebsite}}
 }
 
 \newacronym{GPU}{GPU}{Graphical Processing Unit}
@@ -15,22 +15,22 @@
 \newacronym{SSIML}{SSIML}{Scene Structure and Integration Modelling Language}
 
 \newglossaryentry{SceGraToo}{
-  name=X3D,
-  description={whatever x3d is}
+  name=SceGraToo,
+  description={\textbf{Sce}ne \textbf{Gra}ph Composition \textbf{Too}l}
 }
 \newglossaryentry{OpenGL}{
-  name=X3D,
-  description={whatever x3d is}
+  name=OpenGL,
+  description={Open Graphics Library. An environment for developing portable, interactive 2D and 3D graphics applications. \cite{opengl}}
 }
 \newglossaryentry{git}{
-  name=X3D,
-  description={whatever x3d is}
+  name=git,
+  description={A free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency. \cite{git}}
 }
 \newglossaryentry{WebGL}{
-  name=X3D,
-  description={whatever x3d is}
+  name=WebGL,
+  description={A cross-platform, royalty-free web standard for a low-level 3D graphics API based on OpenGL ES 2.0. \cite{webgl}}
 }
-\newacronym{3D}{3D}{3 dimensial}
+\newacronym{3D}{3D}{3 Dimensial}
 \newacronym{DAG}{DAG}{Directed Acyclic Graph}
 \newacronym{XML}{XML}{Extensible Markup Language}
 \newacronym{VRML}{VRML}{Virtual Reality Modeling Language}
