--- a/latex/seminararbeit.tex
+++ b/latex/seminararbeit.tex
@@ -50,7 +50,7 @@
 % colors
 \usepackage[usenames, dvipsnames]{xcolor}
 % subscript
-\usepackage{fixltx2e}
+% \usepackage{fixltx2e}
 % verzeichnisse zu toc hinzufügen
 \usepackage{tocbibind}
 % index
@@ -86,7 +86,7 @@
 \newcommand{\mytitle}{Web-based 3D-scene composition for further server-sided processing in the Roundtrip3D project}
 \newcommand{\mytitleShort}{SceGraToo}
 \newcommand{\myauthor}{Danny Arnold}
-\newcommand{\myseminar}{Web-basierte Komposition von 3D-Szenen für deren}
+\newcommand{\myseminar}{Web-basierte Komposition von 3D-Szenen für deren serverseitige Weiterverarbeitung im Roundtrip3D Projekt}
 \newcommand{\mydozent}{Prof. Jung}
 \newcommand{\mydozentTwo}{Matthias Lenk}
 \newcommand{\myseminarTwo}{serverseitige Weiterverarbeitung im Roundtrip3D Projekt}
