--- a/latex/prelude.tex
+++ b/latex/prelude.tex
@@ -3,7 +3,7 @@
 \section{Introduction}
 \label{sec:Prelude}
 
-The goal of the thesis is to create a 3D editor, using web technologies,
+The goal of the thesis is to create a \gls{3D} editor, using web technologies,
 which enables its users to postprocess \gls{X3D} scenes. These scenes are the
 product of a tool that was implemented as part of the DFG research
 project \gls{Roundtrip3D} \cite{Jung:2015:SDA:2802768.2802837}.
@@ -12,13 +12,13 @@ project \gls{Roundtrip3D} \cite{Jung:2015:SDA:2802768.2802837}.
 
 As part of the Roundtrip3D project, a round-trip framework (hereafter
 referred to as \emph{R3D}) was developed. This framework also includes a
-graphical editor for SSIML models, to describe 3D applications. Then
+graphical editor for SSIML models, to describe \gls{3D} applications. Then
 \gls{R3D} can be used to generate boilerplate code for multiple programming
 languages, such as JavaScript, Java or C++, and an \gls{X3D} file describing
 the scene. The \gls{X3D} file may contain references to other \gls{X3D} files
-containing the actual 3D data (e.g.~a car and its corresponding tires),
+containing the actual \gls{3D} data (e.g.~a car and its corresponding tires),
 hereafter called \emph{inlines}. These files are created by exporting
-objects from a 3D computer graphics software (e.g.~Blender,
+objects from a \gls{3D} computer graphics software (e.g.~Blender,
 Maya or 3DS Max).\\
 The problem that arises is that each object is usually in the center of
 its own coordinate system. So they need to be translated, rotated and
@@ -26,20 +26,20 @@ maybe even scaled, to result in the desired scene (e.g.~a car where the tires
 are in the places they belong to and not in the center of the chassis).
 The structure is mostly generated. Attribute values of respective nodes,
 such as transformation nodes, need to be adjusted in order to compose the
-overall 3D scene.
+overall \gls{3D} scene.
 
 % \includegraphics{Picture of a car with the tires in the center}\\
 % \includegraphics{Picture of a car with the tires where they belong to}
 
 This can be achieved by adjusting \emph{translate}, \emph{rotate} and
-\emph{scale} properties to arrange 3D objects. To exacerbate this problem
-further, the orientation the 3D artists chose for its object may be unknown, if
+\emph{scale} properties to arrange \gls{3D} objects. To exacerbate this problem
+further, the orientation the \gls{3D} artists chose for its object may be unknown, if
 % TODO: so what now? convention or no convention?
-their is no convention for 3D modeling. \sout{Usually their is a convention
+their is no convention for \gls{3D} modeling. \sout{Usually their is a convention
 about origin of coord system, scaling and orientation} (no there isn't, still
 not sure what to put here). However, we cannot assume that these conventions are
-always met. The main problem is, that 3D transformations, such as translation,
-orientation and scale of single 3D geometries, need to be adjusted. So far,
+always met. The main problem is, that \gls{3D} transformations, such as translation,
+orientation and scale of single \gls{3D} geometries, need to be adjusted. So far,
 there is no graphical tool that meets both of these requirements:
 
 \begin{itemize*}
@@ -65,14 +65,13 @@ there is no graphical tool that meets both of these requirements:
   \end{minipage}
   \begin{minipage}{.5\textwidth}
   	\includegraphics[width=0.9\textwidth]{../assets/wheel4.png}
-  	\caption{An improbable orientation, unless the 3D artist was very confused.}
+  	\caption{An improbable orientation, unless the \gls{3D} artist was very confused.}
   	\label{fig:wheel4}
   \end{minipage}
-  \caption*{Four possible orientations the 3D model of a wheel could have.}
+  \caption*{Four possible orientations the \gls{3D} model of a wheel could have.}
 \end{figure}
 
-Figures \ref{fig:wheel1} - \ref{fig:wheel4} demonstrate multiple orientatins a
-3D model of a wheel can have. \ref{fig:wheel1} to \ref{fig:wheel3} are common
+Figures \ref{fig:wheel1} - \ref{fig:wheel4} demonstrate multiple orientatins a \gls{3D} model of a wheel can have. \ref{fig:wheel1} to \ref{fig:wheel3} are common
 orientations, since it is disputable which of these could be considered be the
 norm. But if one depends on art from 3rd parties, the orientation and position
 could be completely arbitrary like in figure \ref{fig:wheel4}
@@ -82,8 +81,8 @@ generated \gls{X3D} file, but the resulting workflow is not user-friendly. The
 following list explains the workflow using just a text editor.
 
 \begin{enumerate*}
-  \item Model the 3D application, including 3D the scene structure.
-  \item Generate the 3D scene and the application code.
+  \item Model the \gls{3D} application, including \gls{3D} the scene structure.
+  \item Generate the \gls{3D} scene and the application code.
   \item Run the application and evaluate the scene and think about what objects need to go where and whether they need to be scaled.
   \item Type random translation, rotation and scale values into the transform nodes.
   \item Run the application again and evaluate whether the transformations are correct (since one does not know anything about the orientation of the object).
@@ -92,11 +91,8 @@ following list explains the workflow using just a text editor.
 
 Tools like Maya or Blender could also be used for this, but their import
 and export filter discard important metadata that is necessary for the
-round-trip transformation. This is what SceGraToo is meant to be.
-
-SceGraToo addresses both of these issues. It allows for loading the root
-X3D file and changing all transformations, containing the inline nodes,
-using mouse interactions. For fine grained control SceGraToo also
+round-trip transformation. This is what \gls{Roundtrip3D} is meant to be. \gls{Roundtrip3D} addresses both of these issues. It allows for loading the root \gls{X3D} file and changing all transformations, containing the inline nodes,
+using mouse interactions. For fine grained control \gls{Roundtrip3D} also
 contains a tree view that allows the user to input exact attributes for
 translations, rotations and scale.
 
@@ -105,6 +101,6 @@ translations, rotations and scale.
 This thesis addresses two issues:
 
 \begin{enumerate*}
-  \item Allowing for composing generated X3D scenes (with focus on usability). E.g., besides a 3D view, a tree view for fine grained editing should not only visualize the 3D scene's structure, but also allow for entering concrete coordinate values.
+  \item Allowing for composing generated \gls{X3D} scenes (with focus on usability). E.g., besides a \gls{3D} view, a tree view for fine grained editing should not only visualize the \gls{3D} scene's structure, but also allow for entering concrete coordinate values.
   \item During the editing process, the preservation of all information/metadata must be guaranteed.
 \end{enumerate*}
