--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for kietsy at 2015-08-12 18:39:50 +0200 
+%% Created for kietsy at 2015-08-12 19:08:51 +0200
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
+
+@webpage{git,
+	Date-Added = {2015-08-12 17:08:47 +0000},
+	Date-Modified = {2015-08-12 17:08:51 +0000},
+	Url = {https://git-scm.com/}}
+
+@webpage{opengl,
+	Date-Added = {2015-08-12 17:07:36 +0000},
+	Date-Modified = {2015-08-12 17:07:46 +0000},
+	Url = {https://www.opengl.org/about/}}
 
 @webpage{diff,
 	Date-Added = {2015-08-11 19:11:52 +0000},
@@ -152,8 +162,8 @@
 	Date-Added = {2015-08-09 19:55:38 +0000},
 	Date-Modified = {2015-08-09 19:55:59 +0000},
 	Lastchecked = {2015-07-24 18:17},
-	Url = {http://vr.tu-freiberg.de/roundtrip3d/},
-	Bdsk-Url-1 = {http://vr.tu-freiberg.de/roundtrip3d/}}
+	Url = {http://tu-freiberg.de/fakult1/inf/professuren/virtuelle-realitaet-und-multimedia/forschung-jung/roundtrip3d},
+	Bdsk-Url-1 = {http://tu-freiberg.de/fakult1/inf/professuren/virtuelle-realitaet-und-multimedia/forschung-jung/roundtrip3d}}
 
 @webpage{Antiplagiatserklrung,
 	Date-Added = {2015-08-09 19:13:08 +0000},
