--- a/latex/glossary.tex
+++ b/latex/glossary.tex
@@ -12,7 +12,7 @@
 \newacronym{GPU}{GPU}{Graphical Processing Unit}
 \newacronym{SVG}{SVG}{Scalable Vector Graphics}
 \newacronym{R3D}{R3D}{Roundtrip3D}
-\newacronym{SSIML}{SSIML}{Scene Structure and Integration Modelling Language}
+\newacronym{SSIML}{SSIML}{Scene Structure and Integration Modeling Language}
 
 \newglossaryentry{SceGraToo}{
   name=SceGraToo,
@@ -30,7 +30,7 @@
   name=WebGL,
   description={A cross-platform, royalty-free web standard for a low-level 3D graphics API based on OpenGL ES 2.0. \cite{webgl}}
 }
-\newacronym{3D}{3D}{3 Dimensial}
+\newacronym{3D}{3D}{3 Dimensional}
 \newacronym{DAG}{DAG}{Directed Acyclic Graph}
 \newacronym{XML}{XML}{Extensible Markup Language}
 \newacronym{VRML}{VRML}{Virtual Reality Modeling Language}
